Changes for GCP Deployment
Change-Id: I1c828af8c9556f9274fbaa8877acd3990fb461b8

--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -26,6 +26,9 @@ spec:
         dremio-configmap/checksum: {{ (tpl ($.Files.Glob "config/*").AsConfig $) | sha256sum }}
         {{- include "dremio.executor.podAnnotations" (list $ $engineName) | nindent 8}}
     spec:
+      {{- if and (eq $.Values.distStorage.type "gcp")  (eq $.Values.distStorage.gcp.authentication "auto") }}
+      serviceAccountName: {{ $.Values.distStorage.gcp.credentials.serviceAccountName }}
+      {{- end }}
       terminationGracePeriodSeconds: 120
       {{- include "dremio.executor.nodeSelector" (list $ $engineName) | nindent 6}}
       {{- include "dremio.executor.tolerations" (list $ $engineName) | nindent 6}}
