DX-32118: Add GCS Support
Add support for GCS (Google Cloud Storage) to be used for distributed storage.

Change-Id: I0cf6d345f5a126581084e3b7c148e02d76302fd1

--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -26,6 +26,7 @@ spec:
         dremio-configmap/checksum: {{ (tpl ($.Files.Glob "config/*").AsConfig $) | sha256sum }}
         {{- include "dremio.executor.podAnnotations" (list $ $engineName) | nindent 8}}
     spec:
+      {{- include "dremio.executor.serviceAccount" (list $ $engineName) | nindent 6}}
       terminationGracePeriodSeconds: 120
       {{- include "dremio.executor.nodeSelector" (list $ $engineName) | nindent 6}}
       {{- include "dremio.executor.tolerations" (list $ $engineName) | nindent 6}}
