--- a/charts/dremio_v2/templates/zookeeper.yaml
+++ b/charts/dremio_v2/templates/zookeeper.yaml
@@ -62,6 +62,7 @@ spec:
         {{- include "dremio.zookeeper.podLabels" $ | nindent 8 }}
       {{- include "dremio.zookeeper.podAnnotations" $ | nindent 8 }}
     spec:
+      {{- include "dremio.zookeeper.serviceAccount" $ | nindent 6 }}
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
