DX-32045: Fix C3 cache misses in AWSE Enable c3 runtime affinity in AWSE
Change-Id: I9a10c363ac9da6e549751c507e610fea95e5b885

--- a/charts/dremio_v2/templates/dremio-master.yaml
+++ b/charts/dremio_v2/templates/dremio-master.yaml
@@ -71,6 +71,7 @@ spec:
             {{- include "dremio.coordinator.extraStartParams" $ | nindent 12 -}}
             -Dzookeeper=zk-hs:2181
             -Dservices.coordinator.enabled=true
+            -Ddremio.debug.sysopt.c3.runtime.affinity=true
             -Dservices.coordinator.master.enabled=true
             -Dservices.coordinator.master.embedded-zookeeper.enabled=false
             -Dservices.executor.enabled=false
