DX-33721: Add support for AWS Profile auth
Change-Id: Ie8fe9ce15fcae6720e39b8304f8d80fe97f91179

--- a/charts/dremio_v2/templates/dremio-master.yaml
+++ b/charts/dremio_v2/templates/dremio-master.yaml
@@ -75,6 +75,10 @@ spec:
             -Dservices.coordinator.master.embedded-zookeeper.enabled=false
             -Dservices.executor.enabled=false
             -Dservices.conduit.port=45679
+        - name: AWS_CREDENTIAL_PROFILES_FILE
+          value: "/opt/dremio/aws/credentials"
+        - name: AWS_SHARED_CREDENTIALS_FILE
+          value: "/opt/dremio/aws/credentials"
         command: ["/opt/dremio/bin/dremio"]
         args:
         - "start-fg"
