DX-33721: Add support for AWS Profile auth
Change-Id: Ie8fe9ce15fcae6720e39b8304f8d80fe97f91179

--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -68,6 +68,10 @@ spec:
             -Dservices.executor.enabled=true
             -Dservices.conduit.port=45679
             -Dservices.node-tag={{ $engineName }}
+        - name: AWS_CREDENTIAL_PROFILES_FILE
+          value: "/opt/dremio/aws/credentials"
+        - name: AWS_SHARED_CREDENTIALS_FILE
+          value: "/opt/dremio/aws/credentials"
         command: ["/opt/dremio/bin/dremio"]
         args: ["start-fg"]
         ports:
