--- a/charts/dremio_v2/templates/zookeeper.yaml
+++ b/charts/dremio_v2/templates/zookeeper.yaml
@@ -78,6 +78,37 @@ spec:
       containers:
       - name: kubernetes-zookeeper
         imagePullPolicy: Always
+        command:
+        - bash
+        - -ec
+        - |
+            # Execute entrypoint as usual after obtaining ZOO_SERVER_ID based on POD hostname
+            #HOST_NUMBER=${HOSTNAME##*-}; (( HOST_NUMBER++ )); export ZOO_SERVER_ID=$HOST_NUMBER
+            export HOST_NUMBER="${HOSTNAME##*-}"
+            export ZOO_SERVER_ID="$((HOST_NUMBER + 1))"
+            [ -z "${ZOO_SERVER_ID}" ] && echo "Failed to get index from hostname $HOSTNAME" && exit 1
+            exec /entrypoint.sh /run.sh
+        env:
+        - name: ALLOW_ANONYMOUS_LOGIN
+          value: "yes"
+        - name: ZOO_HEAP_SIZE
+          value: "{{ template "dremio.zookeeper.memory" $ }}"
+        - name: ZOO_4LW_COMMANDS_WHITELIST
+#         value: "ruok"                      #safer
+          value: "srvr,mntr,stat,conf,ruok"  #useful when debugging
+        - name: ZOO_ENABLE_ADMIN_SERVER
+          value: "no"
+        - name: ZOO_AUTOPURGE_INTERVAL
+          value: "12"
+        - name: ZOO_SERVERS
+          {{- $replicaCount := int $.Values.zookeeper.count }}
+          {{- $followerPort := "2888" }}
+          {{- $electionPort := "3888" }}
+          {{- $releaseNamespace := .Release.Namespace }}
+          {{- $zookeeperFullname := printf "zk" }}
+          {{- $zookeeperHeadlessServiceName := printf "zk-hs" }}
+          {{- $clusterDomain := "svc.cluster.local" }}
+          value: {{ range $i, $e := until $replicaCount }}{{ $zookeeperFullname }}-{{ $e }}.{{ $zookeeperHeadlessServiceName }}.{{ $releaseNamespace }}.{{ $clusterDomain }}:{{ $followerPort }}:{{ $electionPort }}::{{ $e | add 1}} {{ end }}
         image: "{{ $.Values.zookeeper.image }}:{{ $.Values.zookeeper.imageTag }}"
         resources:
           requests:
@@ -90,40 +121,19 @@ spec:
           name: server
         - containerPort: 3888
           name: leader-election
-        command:
-        - sh
-        - -c
-        - "start-zookeeper \
-          --servers={{ $.Values.zookeeper.count }} \
-          --data_dir=/var/lib/zookeeper/data \
-          --data_log_dir=/var/lib/zookeeper/data/log \
-          --conf_dir=/opt/zookeeper/conf \
-          --client_port=2181 \
-          --election_port=3888 \
-          --server_port=2888 \
-          --tick_time=2000 \
-          --init_limit=10 \
-          --sync_limit=5 \
-          --heap={{- template "dremio.zookeeper.memory" $ -}}M \
-          --max_client_cnxns=60 \
-          --snap_retain_count=3 \
-          --purge_interval=12 \
-          --max_session_timeout=40000 \
-          --min_session_timeout=4000 \
-          --log_level=INFO"
         readinessProbe:
           exec:
-            command: ["sh", "-c", "zookeeper-ready 2181"]
+            command: ["/bin/bash", "-c", "[ \"$(echo ruok | nc 127.0.0.1 2181)\" == \"imok\" ] || exit 1" ]
           initialDelaySeconds: 10
           timeoutSeconds: 5
         livenessProbe:
           exec:
-            command: ["sh", "-c", "zookeeper-ready 2181"]
+            command: ["/bin/bash", "-c", "[ \"$(echo ruok | nc 127.0.0.1 2181)\" == \"imok\" ] || exit 1" ]
           initialDelaySeconds: 10
           timeoutSeconds: 5
         volumeMounts:
         - name: datadir
-          mountPath: /var/lib/zookeeper
+          mountPath: /bitnami/zookeeper
       securityContext:
         runAsUser: 1000
         fsGroup: 1000
