--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -248,8 +248,8 @@ executor:
 # Zookeeper
 zookeeper:
   # The Zookeeper image used in the cluster.
-  image: k8s.gcr.io/kubernetes-zookeeper
-  imageTag: 1.0-3.4.10
+  image: bitnami/zookeeper
+  imageTag: 3.5.9
 
   # CPU & Memory
   # Memory allocated to each zookeeper, expressed in MB.
