--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -69,7 +69,7 @@ spec:
             -Dservices.conduit.port=45679
             -Dservices.node-tag={{ $engineName }}
             -Dsaffron.default.charset=UTF-8
-            -Dsaffron.default.collation.name=Chinese_PRC_BIN
+            -Dsaffron.default.collation.name=UTF-8$zh_CN
         - name: AWS_CREDENTIAL_PROFILES_FILE
           value: "/opt/dremio/aws/credentials"
         - name: AWS_SHARED_CREDENTIALS_FILE
