Enable capability to use OAuth2 with AzureStorage Gen2

--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -397,9 +397,12 @@ distStorage:
     accountName: "Azure Storage Account Name"
     filesystem: "Azure Storage Account Blob Container"
     path: "/"
+    # useOAuth2: true
     credentials:
       accessKey: "Azure Storage Account Access Key"
-
+    #  applicationId: "Azure Application ID"
+    #  secret: "Azure Application Secret"
+    #  oauth2Endpoint: "Azure OAuth2 Endpoint"
     # Extra Properties
     # Use the extra properties block to provide additional parameters to configure the distributed
     # storage in the generated core-site.xml file.
