Added comment for ADLS Oauth usage

--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -397,9 +397,10 @@ distStorage:
     accountName: "Azure Storage Account Name"
     filesystem: "Azure Storage Account Blob Container"
     path: "/"
-    # useOAuth2: true
+    useOAuth2: false
     credentials:
       accessKey: "Azure Storage Account Access Key"
+    # Enable properties when useOAuth2 is set to true
     #  applicationId: "Azure Application ID"
     #  secret: "Azure Application Secret"
     #  oauth2Endpoint: "Azure OAuth2 Endpoint"
