DX-41560: refactor dremio_v2/templates/zookeeper.yaml to work with maintained offical zookeeper:3.7.0 image
see
https://hub.docker.com/_/zookeeper

remove following image:
image  k8s.gcr.io/kubernetes-zookeeper
imageTag: 1.0-3.4.10

add following image:
https://hub.docker.com/_/zookeeper
zk version : 3.7.0

- The biggest change is to move configuration elements to ENV variables as
is the convention with bitnami images.
- changed the persistent volume mount point to /bitnami/zookeeper
- added ZOO_MY_ID to identify the server
- inlined the zookeeper ready check

Change-Id: I0b8471263cc24016b692aef6c0ff9e2e70298ace

--- a/charts/dremio_v2/templates/zookeeper.yaml
+++ b/charts/dremio_v2/templates/zookeeper.yaml
@@ -83,14 +83,13 @@ spec:
         - -ec
         - |
             # Execute entrypoint as usual after obtaining ZOO_MY_ID based on POD hostname
-            #HOST_NUMBER=${HOSTNAME##*-}; (( HOST_NUMBER++ )); export ZOO_MY_ID=$HOST_NUMBER
             export HOST_NUMBER="${HOSTNAME##*-}"
             export ZOO_MY_ID="$((HOST_NUMBER + 1))"
             [ -z "${ZOO_MY_ID}" ] && echo "Failed to get index from hostname $HOSTNAME" && exit 1
             echo "ZOO_MY_ID=${ZOO_MY_ID}"
             rm -rf $ZOO_DATA_DIR/myid && echo "removed stale $ZOO_DATA_DIR/myid"
             /docker-entrypoint.sh
-            # there is a bug in the official image docker-entrypoint.sh does not myid if it exists
+            # there is a bug in the official image docker-entrypoint.sh does not write myid if it exists
             zkServer.sh start-foreground
         env:
 #        - name: ALLOW_ANONYMOUS_LOGIN
