--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -248,8 +248,8 @@ executor:
 # Zookeeper
 zookeeper:
   # The Zookeeper image used in the cluster.
-  image: k8s.gcr.io/kubernetes-zookeeper
-  imageTag: 1.0-3.4.10
+  image: zookeeper
+  imageTag: 3.8.0
 
   # CPU & Memory
   # Memory allocated to each zookeeper, expressed in MB.
@@ -259,6 +259,21 @@ zookeeper:
   count: 3
 
   volumeSize: 10Gi
+
+  # A list of comma separated Four Letter Words commands that user wants to use.
+  # A valid Four Letter Words command must be put in this list else ZooKeeper server
+  # will not enable the command. By default the whitelist only contains "srvr"
+  # command which zkServer.sh uses. The rest of four letter word commands are disabled by default.
+  zookeeper4LWCommandsWhitelist: "ruok"
+
+  # The AdminServer is an embedded Jetty server that provides an HTTP interface to the four letter word commands.
+  # By default, the server is started on port 8080, and commands are issued by going to the URL "/commands/[command name]",
+  # e.g., http://localhost:8080/commands/stat.
+  zookeeperAdminserverEnabled: "false"
+
+  # The time interval in hours for which the purge task has to be triggered.
+  # Set to a positive integer (1 and above) to enable the auto purging. Defaults to 0.
+  zookeeperAutopurgePurgeinterval: "12"
 
   # Kubernetes Service Account
   # Uncomment below to use a custom Kubernetes service account for Zookeeper.
