DX-46221: Deprecate 'local' distStorage option for Helm deployments.
- Deprecates support for 'local' distStorage type for Dremio release
  21.0.0 or newer.

Change-Id: I2e178aff5a0151d26249db05c6b97430e6404a96

--- a/charts/dremio_v2/config/dremio.conf
+++ b/charts/dremio_v2/config/dremio.conf
@@ -14,6 +14,14 @@
 # limitations under the License.
 #
 
+{{- if (eq $.Values.distStorage.type "local") }}
+  {{- if eq $.Values.imageTag "latest" }}
+  {{- fail "\n\n** ERROR: The 'local' distStorage type is no longer supported in Dremio 21.0.0 or later. Please configure another distStorage provider to deploy Dremio. (Note: 'latest' is presumed to be 21.0.0+.) **\n" -}}
+  {{- else if ge ((semver $.Values.imageTag).Major) 21 }}
+  {{- fail "\n\n** ERROR: The 'local' distStorage type is no longer supported in Dremio 21.0.0 or later. Please configure another distStorage provider to deploy Dremio. **\n" -}}
+  {{- end }}
+{{- end }}
+
 paths: {
   # Local path for dremio to store data.
   local: ${DREMIO_HOME}"/data"
