DX-41560: refactor zookeeper.yaml to comply with maintained/official zookeeper:3.8.0+ images
see image details at
https://hub.docker.com/_/zookeeper

- Use conventions in place for the official images by passing non-default
arguments as environment variables.
- changed the persistent volume mount point to /data (default).
- added ZOO_MY_ID to identify the server based on dns host name.
- inline the zookeeper ready check
- added check to ensure that if older image is in-use the user gets an error

Change-Id: I4a9f26c83036ec17ae47992553edcec224816d51

--- a/charts/dremio_v2/config/dremio.conf
+++ b/charts/dremio_v2/config/dremio.conf
@@ -22,6 +22,11 @@
   {{- end }}
 {{- end }}
 
+# use the official zookeeper kubernetes image
+{{- if (eq $.Values.zookeeper.image "k8s.gcr.io/kubernetes-zookeeper") }}
+  {{- fail "\n\n** ERROR: zookeeper image k8s.gcr.io/kubernetes-zookeeper is no longer supported. Please see upgrading zookeeper section in README.md. **\n" -}}
+{{- end }}
+
 paths: {
   # Local path for dremio to store data.
   local: ${DREMIO_HOME}"/data"
